<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/StatsName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="27dp"
                android:text="Sukurti naują tikslą"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/GoalTypeFrame"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_fragment_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StatsName">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/GoalTypeText"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:text="Tikslo tipas"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/GoalTypeItem"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="4dp"
                        android:backgroundTint="@color/white"
                        android:dropDownWidth="wrap_content"
                        android:entries="@array/create_spinner_options"
                        android:gravity="end"
                        android:layout="@layout/spinner_item_layout"
                        android:popupBackground="@color/darkergray"
                        android:spinnerMode="dropdown"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.005"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/GoalTypeText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/GoalTimePicker"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_fragment_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GoalTypeFrame">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/GoalTimeText"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:text="Laikas"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <NumberPicker
                        android:id="@+id/GoalHourTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="4dp"
                        android:theme="@style/WhiteNumberPicker"
                        app:layout_constraintEnd_toStartOf="@+id/GoalMinuteTime"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/GoalTimeText" />

                    <NumberPicker
                        android:id="@+id/GoalMinuteTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="4dp"
                        android:theme="@style/WhiteNumberPicker"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/GoalHourTime"
                        app:layout_constraintTop_toBottomOf="@+id/GoalTimeText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/GoalUnlockField"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_fragment_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GoalTypeFrame">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="245dp"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/GoalUnlockCount"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:text="Skaičius"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <NumberPicker
                        android:id="@+id/GoalCountPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:theme="@style/WhiteNumberPicker"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/GoalUnlockCount" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/GoalAppFrame"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="27dp"
                android:background="@drawable/round_fragment_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GoalUnlockField">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textCategories2"
                        android:layout_width="150dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:text="Programėlė"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Spinner
                        android:id="@+id/GoalAppItem"
                        android:layout_width="280dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="4dp"
                        android:backgroundTint="@color/white"
                        android:dropDownWidth="wrap_content"
                        android:entries="@array/create_spinner_options"
                        android:gravity="end"
                        android:layout="@layout/spinner_item_layout"
                        android:popupBackground="@color/darkergray"
                        android:spinnerMode="dropdown"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.005"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textCategories2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <Button
                android:id="@+id/yellowButton"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/round_button_background"
                android:text="Išsaugoti"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GoalAppFrame" />


            <Button
                android:id="@+id/blackButton"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/black_button_background"
                android:text="Atšaukti"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/yellowButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="27dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="27dp" />

</androidx.constraintlayout.widget.ConstraintLayout>