...
    <item
        android:id="@+id/menu_button2"
        android:title="Statistika"
        android:icon="@drawable/stats" />

    <item
        android:id="@+id/menu_button5"
        android:title="Tikslai"
        android:icon="@drawable/target" />

    <item
        android:id="@+id/menu_button3"
        android:title="Blokuoti"
        android:icon="@drawable/block" />
...
